Fix Terminator squad weapon counts.

--- a/Warhammer/40k_calc.html
+++ b/Warhammer/40k_calc.html
@@ -159,7 +159,7 @@ Assault Cannon	24"	6	3+	6	0	1	Devastating Wounds
 Heavy Flamer (x0)	12"	D6	N/A	5	-1	1	Ignores Cover, Torrent
 Melee Weapons	Range	A	WS	S	AP	D	Keywords
 Power Weapon	Melee	4	3+	5	-2	1	-
-Chainfist (x2)	Melee	3	4+	8	-2	2	Anti-Vehicle 3+
+Chainfist	Melee	3	4+	8	-2	2	Anti-Vehicle 3+
 Power Fist (x3)	Melee	3	3+	8	-2	2	-
 Abilities Teleport HomerFury of the FirstInvulnerable Save 4
 Rules Deep StrikeOath of MomentRapid FireAnti-Devastating WoundsIgnores CoverTorrent
@@ -191,7 +191,8 @@ Keywords: Deathwing Deathwing Knights Faction: Adeptus Astartes Faction: Dark An
             `Deathwing Terminator Squad 
 Models
  1x Deathwing Sergeant: Power Weapon, Storm Bolter
- 3x Deathwing Terminator: Power Fist, Storm Bolter
+ 1x Deathwing Terminator: Power Fist, Storm Bolter
+ 2x Deathwing Terminator w/ Chainfist: Chainfist, Storm Bolter
  0x Deathwing Terminator w/ Heavy Weapon: Chainfist, Assault Cannon
  0x Deathwing Terminator w/ Heavy Weapon: Chainfist, Cyclone Missile Launcher & Storm Bolter
  0x Deathwing Terminator w/ Heavy Weapon: Chainfist, Heavy Flamer
@@ -200,17 +201,17 @@ Unit	M	T	SV	W	LD	OC
 Deathwing Sergeant	5"	5	2+	3	6+	1
 Deathwing Terminator (x8)	5"	5	2+	3	6+	1
 Ranged Weapons	Range	A	BS	S	AP	D	Keywords
-Storm Bolter (x6)	24"	2	3+	4	0	1	Rapid Fire 2
+Storm Bolter (x4)	24"	2	3+	4	0	1	Rapid Fire 2
 Assault Cannon (x0)	24"	6	3+	6	0	1	Devastating Wounds
 ➤ Cyclone Missile Launcher - Frag (x0)	36"	2D6	3+	4	0	1	Blast
 ➤ Cyclone Missile Launcher - Krak (x0)	36"	2	3+	9	-2	D6	-
 Heavy Flamer (x0)	12"	D6	N/A	5	-1	1	Ignores Cover, Torrent
-➤ Plasma Cannon - Standard	36"	D3	3+	7	-2	1	Blast
+➤ Plasma Cannon - Standard (x0)	36"	D3	3+	7	-2	1	Blast
 ➤ Plasma Cannon - Supercharge	36"	D3	3+	8	-3	2	Blast, Hazardous
 Melee Weapons	Range	A	WS	S	AP	D	Keywords
 Power Weapon	Melee	4	3+	5	-2	1	-
-Power Fist (x4)	Melee	3	3+	8	-2	2	-
-Chainfist (x4)	Melee	3	4+	8	-2	2	Anti-Vehicle 3+
+Power Fist	Melee	3	3+	8	-2	2	-
+Chainfist (x3)	Melee	3	4+	8	-2	2	Anti-Vehicle 3+
 Abilities Invulnerable Save 4DeathwingAttached UnitTeleport Homer
 Rules Deep StrikeOath of MomentAnti-Devastating WoundsBlastIgnores CoverTorrentHazardous
 Keywords: Deathwing Deathwing Terminator Squad Faction: Adeptus Astartes Faction: Dark Angels Imperium Infantry Terminator`,
