Fix AUSPEX ARRAY. Add ROTATING DEATH.

--- a/Warhammer/40k_calc.html
+++ b/Warhammer/40k_calc.html
@@ -46,18 +46,16 @@ Close Combat Weapon	Melee	4	3+	4	0	1	-
 Abilities Narthecium, Gene Seed Recovery, Leader, Fire Discipline
 Rules Leader, Oath of Moment, Pistol
 Keywords: Character Faction: Adeptus Astartes Grenades Imperium Infantry Primaris Apothecary Tacticus`,
-            `Techmarine
+            `Apothecary Biologis 
 Unit	M	T	SV	W	LD	OC
-Techmarine	6"	4	2+	4	6+	1
+Apothecary Biologis	5"	6	3+	5	6+	3
 Ranged Weapons	Range	A	BS	S	AP	D	Keywords
-Forge Bolter	24"	3	2+	5	-1	2	-
-Grav-pistol	12"	1	3+	4	-1	2	Anti-vehicle 2+, Pistol
+Absolvor Bolt Pistol	18"	1	3+	5	-1	2	Pistol
 Melee Weapons	Range	A	WS	S	AP	D	Keywords
-Omnissian Power Axe	Melee	4	3+	6	-2	2	-
-Servo-arm	Melee	1	3+	8	-2	3	Extra Attacks
-Abilities TechmarineBlessing of the OmnissiahVengeance of the OmnissiahLeaderArtificer Armour
-Rules LeaderOath of MomentPistolExtra Attacks
-Keywords: Character Faction: Adeptus Astartes Grenades Imperium Infantry Tacticus Techmarine Warlord`,
+Close Combat Weapon	Melee	4	3+	4	0	1	-
+Abilities Surgical PrecisionVivispectrumLeader
+Rules LeaderOath of MomentPistol
+Keywords: Apothecary Biologis Character Faction: Adeptus Astartes Gravis Imperium Infantry`,
             `Eradicator Squad
 Models
  1x Eradicator: Bolt Pistol, Close Combat Weapon, Melta Rifle
@@ -75,6 +73,48 @@ Abilities
 Total Obliteration: Each time a ranged attack made by a model in this unit targets a Monster or Vehicle model, you can re-roll the Hit roll, you can re-roll the Wound roll and you can re-roll the Damage roll.
 Rules Oath of MomentPistolHeavyMelta
 Keywords: Eradicator Squad Faction: Adeptus Astartes Gravis Grenades Imperium Infantry`,
+            `Gladiator Lancer 
+Unit	M	T	SV	W	LD	OC
+Gladiator Lancer	10"	10	3+	12	6+	3
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Icarus Rocket Pod	24"	D3	3+	8	-1	2	Anti-fly 2+
+Ironhail Heavy Stubber	36"	3	3+	4	0	1	Rapid Fire 3
+Lancer Laser Destroyer	72"	2	3+	14	-4	D6+3	Heavy
+Storm Bolter (x2)	24"	2	3+	4	0	1	Rapid Fire 2
+Fragstorm Grenade Launcher (x0)	18"	D6	3+	4	0	1	Blast
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Armoured Tracks	Melee	3	4+	6	0	1	-
+Abilities Aqullon OpticsDamaged: 1-4 Wounds Remaining
+Rules Deadly Demise D3Oath of MomentAnti-Rapid FireHeavy
+Keywords: Faction: Adeptus Astartes Gladiator Lancer Imperium Smoke Vehicle`,
+            `Gladiator Reaper 
+Unit	M	T	SV	W	LD	OC
+Gladiator Reaper	10"	10	3+	12	6+	3
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Icarus Rocket Pod	24"	D3	3+	8	-1	2	Anti-fly 2+
+Ironhail Heavy Stubber	36"	3	3+	4	0	1	Rapid Fire 3
+Tempest Bolter (x2)	24"	4	3+	4	-1	1	Rapid Fire 4
+Twin Heavy Onslaught Gatling Cannon	24"	12	3+	6	0	1	Devastating Wounds, Twin-linked
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Armoured Tracks	Melee	3	4+	6	0	1	-
+Abilities Rotating DeathDamaged: 1-4 Wounds Remaining
+Rules Deadly Demise D3Oath of MomentAnti-Rapid FireDevastating WoundsTwin-linked
+Keywords: Faction: Adeptus Astartes Gladiator Reaper Imperium Smoke Vehicle`,
+            `Gladiator Valiant 
+Unit	M	T	SV	W	LD	OC
+Gladiator Valiant	10"	10	3+	12	6+	3
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Icarus Rocket Pod	24"	D3	3+	8	-1	2	Anti-fly 2+
+Ironhail Heavy Stubber	36"	3	3+	4	0	1	Rapid Fire 3
+Multi-melta (x2)	18"	2	3+	9	-4	D6	Melta 2
+Twin Las-talon	36"	2	3+	10	-3	D6+1	Twin-linked
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Armoured Tracks	Melee	3	4+	6	0	1	-
+Abilities
+Ferocious Assault: Each time this model makes an attack with its Twin Las-talon that targets the closest eligible Monster or fVehicle unit, add 1 to the Hit roll
+Damaged: 1-4 Wounds Remaining: While this model has 1-4 wounds remaining, each time this model makes an attack, subtract 1 from the Hit roll.
+Rules Deadly Demise D3Oath of MomentAnti-Rapid FireMeltaTwin-linked
+Keywords: Faction: Adeptus Astartes Gladiator Valiant Imperium Smoke Vehicle`,
             `Infernus Squad
 Models
  5x Infernus Marines: Bolt Pistol, Close Combat Weapon, Pyreblaster
@@ -89,6 +129,78 @@ Close Combat Weapon (x6)	Melee	3	3+	4	0	1	-
 Abilities Purge the Foe
 Rules Oath of MomentPistolIgnores CoverTorrent
 Keywords: Faction: Adeptus Astartes Grenades Imperium Infantry Infernus Squad Tacticus`,
+            `Impulsor
+Unit	M	T	SV	W	LD	OC
+Impulsor	12"	9	3+	11	6+	2
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+➤ Bellicatus Missile Array - Frag (x0)	48"	D6	3+	4	0	1	Blast
+➤ Bellicatus Missile Array - Icarus (x0)	48"	D3	3+	8	-1	2	Anti-Fly 2+
+➤ Bellicatus Missile Array - Krak (x0)	48"	1	3+	8	-2	D6	-
+Ironhail Skytalon Array (x0)	36"	8	3+	4	0	1	Anti-Fly 4+, Sustained Hits 1
+Ironhail Heavy Stubber	36"	3	3+	4	0	1	Rapid Fire 3
+Storm Bolter (x2)	24"	2	3+	4	0	1	Rapid Fire 2
+Fragstorm Grenade Launcher (x0)	18"	D6	3+	4	0	1	Blast
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Armoured Tracks	Melee	3	4+	6	0	1	-
+Abilities TransportAssault VehicleShield Dome
+Rules Deadly Demise D3Firing Deck 6Oath of MomentRapid Fire
+Keywords: Dedicated Transport Faction: Adeptus Astartes Imperium Impulsor Transport Vehicle`,
+            `Land Raider 
+Unit	M	T	SV	W	LD	OC
+Land Raider	10"	12	2+	16	6+	5
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Godhammer Lascannon (x2)	48"	2	3+	12	-3	D6+1	-
+Hunter Killer Missile	48"	1	2+	14	-3	D6	One Shot
+Multi-melta	18"	2	3+	9	-4	D6	Melta 2
+Storm Bolter	24"	2	3+	4	0	1	Rapid Fire 2
+Twin Heavy Bolter	36"	3	3+	5	-1	2	Sustained Hits 1, Twin-linked
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Armoured Hull	Melee	6	4+	8	0	1	-
+Abilities Assault RampTransportDamaged: 1-5 Wounds Remaining
+Rules Deadly Demise D6Oath of MomentOne ShotMeltaRapid FireSustained HitsTwin-linked
+Keywords: Faction: Adeptus Astartes Imperium Land Raider Smoke Transport Vehicle`,
+            `Land Raider Crusader 
+Unit	M	T	SV	W	LD	OC
+Land Raider Crusader	12"	12	2+	16	6+	5
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Hunter Killer Missile	48"	1	2+	14	-3	D6	One Shot
+Hurricane Bolter (x2)	24"	6	3+	4	0	1	Rapid Fire 6, Twin-linked
+Multi-melta	18"	2	3+	9	-4	D6	Melta 2
+Storm Bolter	24"	2	3+	4	0	1	Rapid Fire 2
+Twin Assault Cannon	24"	6	3+	6	0	1	Devastating Wounds, Twin-linked
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Armoured Hull	Melee	6	4+	8	0	1	-
+Abilities TransportAssault RampDamaged: 1-5 Wounds Remaining
+Rules Deadly Demise D6Oath of MomentOne ShotTwin-linkedRapid FireMeltaDevastating Wounds
+Keywords: Faction: Adeptus Astartes Grenades Imperium Land Raider Crusader Smoke Transport Vehicle`,
+            `Redemptor Dreadnought
+Unit	M	T	SV	W	LD	OC
+Redemptor Dreadnought	8"	10	2+	12	6+	4
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Icarus Rocket Pod	24"	D3	3+	8	-1	2	Anti-fly 2+
+Heavy Onslaught Gatling Cannon	24"	12	3+	6	0	1	Devastating Wounds
+➤ Macro Plasma Incinerator - Standard (x0)	36"	D6+1	3+	8	-3	2	Blast
+➤ Macro Plasma Incinerator - Supercharge (x0)	36"	D6+1	3+	9	-4	3	Blast, Hazardous
+Onslaught Gatling Cannon	24"	8	3+	5	0	1	Devastating Wounds
+Heavy Flamer (x0)	12"	D6	N/A	5	-1	1	Ignores Cover, Torrent
+Twin Fragstorm Grenade Launcher (x0)	18"	D6	3+	4	0	1	Blast, Twin-linked
+Twin Storm Bolter	24"	2	3+	4	0	1	Rapid Fire 2, Twin-linked
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Redemptor Fist	Melee	5	3+	12	-2	3	-
+Abilities Duty EternalDamaged: 1-4 Wounds Remaining
+Rules Deadly Demise D3Oath of MomentAnti-HazardousBlastIgnores CoverTorrentTwin-linked
+Keywords: Faction: Adeptus Astartes Imperium Redemptor Dreadnought Vehicle Walker`,
+            `Rhino 
+Unit	M	T	SV	W	LD	OC
+Rhino	12"	9	3+	10	6+	2
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Hunter Killer Missile	48"	1	2+	14	-3	D6	One Shot
+Storm Bolter	24"	2	3+	4	0	1	Rapid Fire 2
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Armoured Tracks	Melee	3	4+	6	0	1	-
+Abilities Self RepairTransport
+Rules Firing Deck 2Deadly Demise D3Oath of MomentOne ShotRapid Fire
+Keywords: Dedicated Transport Faction: Adeptus Astartes Imperium Rhino Smoke Transport Vehicle`,
             `Tactical Squad
 Models
  7x Tactical Marine: Bolt Pistol, Boltgun, Close Combat Weapon
@@ -109,40 +221,34 @@ Astartes Chainsword	Melee	4	3+	4	-1	1	-
 Abilities Combat Squads
 Rules Oath of MomentPistolHeavyBlastTorrentIgnores Cover
 Keywords: Battleline Faction: Adeptus Astartes Grenades Imperium Infantry Tactical Squad`,
-            `Impulsor
+            `Techmarine
 Unit	M	T	SV	W	LD	OC
-Impulsor	12"	9	3+	11	6+	2
+Techmarine	6"	4	2+	4	6+	1
 Ranged Weapons	Range	A	BS	S	AP	D	Keywords
-➤ Bellicatus Missile Array - Frag (x0)	48"	D6	3+	4	0	1	Blast
-➤ Bellicatus Missile Array - Icarus (x0)	48"	D3	3+	8	-1	2	Anti-Fly 2+
-➤ Bellicatus Missile Array - Krak (x0)	48"	1	3+	8	-2	D6	-
-Ironhail Skytalon Array (x0)	36"	8	3+	4	0	1	Anti-Fly 4+, Sustained Hits 1
-Ironhail Heavy Stubber	36"	3	3+	4	0	1	Rapid Fire 3
-Storm Bolter (x2)	24"	2	3+	4	0	1	Rapid Fire 2
-Fragstorm Grenade Launcher (x0)	18"	D6	3+	4	0	1	Blast
+Forge Bolter	24"	3	2+	5	-1	2	-
+Grav-pistol	12"	1	3+	4	-1	2	Anti-vehicle 2+, Pistol
 Melee Weapons	Range	A	WS	S	AP	D	Keywords
-Armoured Tracks	Melee	3	4+	6	0	1	-
-Abilities TransportAssault VehicleShield Dome
-Rules Deadly Demise D3Firing Deck 6Oath of MomentRapid Fire
-Keywords: Dedicated Transport Faction: Adeptus Astartes Imperium Impulsor Transport Vehicle`,
-            `Redemptor Dreadnought 
+Omnissian Power Axe	Melee	4	3+	6	-2	2	-
+Servo-arm	Melee	1	3+	8	-2	3	Extra Attacks
+Abilities TechmarineBlessing of the OmnissiahVengeance of the OmnissiahLeaderArtificer Armour
+Rules LeaderOath of MomentPistolExtra Attacks
+Keywords: Character Faction: Adeptus Astartes Grenades Imperium Infantry Tacticus Techmarine Warlord`,
+            `Terminator Assault Squad
+Models
+ 1x Assault Terminator Sergeant: Thunder Hammer & Storm Shield (Storm Shield, Thunder Hammer)
+ 3x Assault Terminator w/ Thunder Hammer & Storm Shield: Storm Shield, Thunder Hammer
+ 1x Assault Terminator w/ Twin Lightning Claws: Twin Lightning Claws
 Unit	M	T	SV	W	LD	OC
-Redemptor Dreadnought	8"	10	2+	12	6+	4
-Ranged Weapons	Range	A	BS	S	AP	D	Keywords
-Icarus Rocket Pod	24"	D3	3+	8	-1	2	Anti-fly 2+
-Heavy Onslaught Gatling Cannon	24"	12	3+	6	0	1	Devastating Wounds
-➤ Macro Plasma Incinerator - Standard (x0)	36"	D6+1	3+	8	-3	2	Blast
-➤ Macro Plasma Incinerator - Supercharge (x0)	36"	D6+1	3+	9	-4	3	Blast, Hazardous
-Onslaught Gatling Cannon	24"	8	3+	5	0	1	Devastating Wounds
-Heavy Flamer (x0)	12"	D6	N/A	5	-1	1	Ignores Cover, Torrent
-Twin Fragstorm Grenade Launcher (x0)	18"	D6	3+	4	0	1	Blast, Twin-linked
-Twin Storm Bolter	24"	2	3+	4	0	1	Rapid Fire 2, Twin-linked
+Assault Terminator Sergeant w/ Storm Shield	5"	5	2+	4	6+	1
+Assault Terminator w/ Storm Shield (x3)	5"	5	2+	4	6+	1
+Assault Terminator w/ Lightning Claws	5"	5	2+	3	6+	1
 Melee Weapons	Range	A	WS	S	AP	D	Keywords
-Redemptor Fist	Melee	5	3+	12	-2	3	-
-Abilities Duty EternalDamaged: 1-4 Wounds Remaining
-Rules Deadly Demise D3Oath of MomentAnti-HazardousBlastIgnores CoverTorrentTwin-linked
-Keywords: Deathwing Faction: Adeptus Astartes Imperium Redemptor Dreadnought Vehicle Walker`,
-            `Terminator Squad 
+Thunder Hammer (x4)	Melee	3	4+	8	-2	2	Devastating Wounds
+Twin Lightning Claws	Melee	5	3+	5	-2	1	Twin-linked
+Abilities Teleport HomerTerminatus AssaultInvulnerable SaveStorm Shield
+Rules Deep StrikeOath of MomentDevastating WoundsTwin-linked
+Keywords: Faction: Adeptus Astartes Imperium Infantry Terminator Terminator Assault Squad`,
+            `Terminator Squad
 Models
  1x Terminator Sergeant: Storm Bolter, Power Weapon
  1x Terminator w/ Heavy Weapon: Chainfist, Assault Cannon
@@ -739,7 +845,7 @@ Keywords: Character Epic Hero Faction: Leagues of Votann Infantry Warlord Ûthar
                     // if (target_keywords.includes("FIGHTS FIRST")) {
                     // TODO: Weapon inputs for target and bidirectional combat simulation.
                     // }
-                } else {
+                } else if (source_abilities.includes("AUSPEX ARRAY")) {
                     // Auspex Array: Ranged weapons equipped by the bearer have the [IGNORES COVER] ability.
                     log("Auspex Array grants IGNORES COVER to ranged weapons.")
                     weapon_keywords.push("IGNORES COVER")
@@ -752,7 +858,20 @@ Keywords: Character Epic Hero Faction: Leagues of Votann Infantry Warlord Ûthar
                     log(`Lone operative hidden.`)
                     continue
                 }
-
+                // Rotating Death: This model’s Twin Heavy Onslaught Gatling Cannon has the [SUSTAINED HITS 2] ability when targeting Infantry units.
+                if (source_abilities.includes("ROTATING DEATH") && weapon === "Twin Heavy Onslaught Gatling Cannon" && target_keywords.includes("INFANTRY")) {
+                    log("Rotating Death: This model’s Twin Heavy Onslaught Gatling Cannon has the [SUSTAINED HITS 2] ability when targeting Infantry units.")
+                    weapon_keywords.push("SUSTAINED HITS 2")
+                }
+                let hit_rerolls = 0
+                let wound_rerolls = 0
+                let damage_rerolls = 0
+                // Aqullon Optics: Each time this model is selected to shoot, you can re-roll one Hit roll, you can re-roll one Wound roll and you can re-roll one Damage roll when resolving its attacks.
+                if (source_abilities.includes("AQUILON OPTICS")) {
+                    hit_rerolls += 1
+                    wound_rerolls += 1
+                    damage_rerolls += 1
+                } 
                 const WS = geti(`skill${i}`) || 0
                 const S = geti(`strength${i}`)
                 const AP = Math.abs(geti(`piercing${i}`))
@@ -791,6 +910,13 @@ Keywords: Character Epic Hero Faction: Leagues of Votann Infantry Warlord Ûthar
                             if (TOTAL_OBLITERATION && hit_roll < WS) {
                                 hit_roll = d6()
                                 log(`Total Obliteration re-roll: ${hit_roll}`)
+                            }
+                            while (hit_rerolls > 0) {
+                                --hit_rerolls
+                                if (hit_roll < WS) {
+                                    hit_roll = d6()
+                                    log(`Hit re-roll: ${hit_roll}`)
+                                } else break
                             }
                             // Whirling Onslaught: Each time a unit in this unit makes a melee attack, re-roll a Hit roll of 1. If this unit made a Charge move this turn, you can re-roll the Hit roll instead.
                             if (source_abilities.includes("WHIRLING ONSLAUGHT") && R < 2) {
@@ -856,6 +982,10 @@ Keywords: Character Epic Hero Faction: Leagues of Votann Infantry Warlord Ûthar
 
                                 // https://www.wargamer.com/warhammer-40k/abilities#twin-linked
                                 let to_wound_rolls = TOTAL_OBLITERATION || weapon_keywords.includes("TWIN-LINKED") ? 2 : 1
+                                if (wound_rerolls > 0) {
+                                    to_wound_rolls += wound_rerolls
+                                    --wound_rerolls
+                                }
                                 let wound_roll
                                 for (let wi = 1; wi <= to_wound_rolls; ++wi) {
                                     wound_roll = d6()
@@ -927,6 +1057,14 @@ Keywords: Character Epic Hero Faction: Leagues of Votann Infantry Warlord Ûthar
                                 log(`Damage roll: ${D}`)
                                 D = new_D
                                 log(`Total Obliteration re-roll: ${D}`)
+                            }
+                            while (damage_rerolls > 0) {
+                                --damage_rerolls
+                                new_D = geti(`damage${i}`)
+                                if (D < new_D) {
+                                    D = new_D
+                                    log(`Damage re-roll: ${D}`)
+                                }
                             }
                             // division
                             if (target_abilities.includes("NECRODERMIS")) {
